Stuck on Fixing icons to correct position

--- a/style.css
+++ b/style.css
@@ -2,12 +2,12 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: "Roboto", sans-serif;
+  font-family: "roboto", sans-serif;
 }
 
 body {
   height: 100vh;
-  background-color: rgb(255, 252, 237);
+  background: #fff;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -25,76 +25,13 @@ body {
   border: 1px solid #c7c7c783;
 }
 
-.translator_property .nuv_item {
+.translator_property .nuv_item{
   display: flex;
   width: 100%;
   height: 50px;
   justify-content: space-between;
   align-items: center;
   list-style: none;
-  border-bottom: 1px solid #c7c7c7c7;
+  border-bottom: 1px solid #c7c7c7;
   padding: 0 20px;
-}
-
-.translator_property .nuv_item li select {
-  outline: none;
-  border-style: none;
-  padding: 10px 0;
-  font-size: 17px;
-  font-weight: 500;
-  color: black;
-  cursor: pointer;
-  transition: all .3s ease-out;
-}
-
-.translator_property .nuv_item li select:hover {
-  color: #03abff;
-}
-
-.bx-transfer {
-  font-size: 22px;
-  color: black;
-  cursor: pointer;
-  transition: all .3s ease-out;
-}
-
-.bx-transfer:hover {
-  color: #03abff;
-}
-
-.write_box {
-  display: flex;
-}
-
-.property_form .property_trans {
-  width: 100%;
-  position: relative;
-}
-
-.write_box textarea {
-  width: 100%;
-  height: 250px;
-  border-style: none;
-  outline: none;
-  resize: none;
-  padding: 10px 20px;
-  font-size: 20px;
-  position: relative;
-  color: #606066;
-}
-
-.write_box textarea:nth-child(1) {
-  border-right: 1px solid #c7c7c7c7;
-}
-
-.write_box .icons {
-  position: absolute;
-  right: 0;
-  bottom: 0;
-  display: flex;
-}
-
-.write_box .icons:nth-child(1) {
-  justify-content: space-between;
-  align-items: center;
 }
